--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Week 6",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "Week_6"
+  ],
   "author": "Maxx Duniphin",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^4.9.6",
+    "mongoose": "^4.9.5",
     "restify": "^4.3.0"
   }
 }
