--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Maxx Duniphin",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "mongoose": "^4.9.5",
     "restify": "^4.3.0"
   }
