--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "jsonwebtoken": "^7.4.0",
     "mongoose": "^4.9.5",
     "restify": "^4.3.0"
   }
